Tweak Lein's REPL profile